--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@ body {
     background-color: #f7f7f7;
     font-family: "Proxima Nova", Helvetica, sans-serif;
     font-size: 14px;
-    padding: 50px 80px;
+    padding: 3rem 5rem;
     max-width: 1140px;
     margin: auto;
+    overflow-x:hidden;
 }
 
 a {
@@ -119,7 +120,6 @@ input::placeholder {
     position: absolute;
     top: 60%;
     left: 0;
-    margin-left: 50px;
     z-index: -1;
 }
 
@@ -136,3 +136,42 @@ input::placeholder {
     width: 100px;
     opacity: 50%;
 }
+
+@media screen and (max-width: 1024px) {
+    input {
+        margin-top: 5px;
+        padding: 13px;
+        width: 100%;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .content {
+        margin-top: 25px;
+        padding: 40px 20px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    body {
+        padding: 2rem 2rem;
+
+    }
+
+    input {
+        margin-top: 5px;
+        padding: 13px;
+        width: 100%;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .content {
+        margin-top: 25px;
+        padding: 40px 20px;
+    }
+  }
