--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: "Proxima Nova", Helvetica, sans-serif;
     font-size: 14px;
     padding: 3rem 5rem;
-    max-width: 900px;
+    max-width: 1100px;
     margin: auto;
     overflow-x:hidden;
 }
@@ -49,7 +49,7 @@ header .nav-links a{
 .content {
     margin-top: 50px;
     background-color: #fff;
-    padding: 40px 20px;
+    padding: 50px 30px;
 }
 
 h2 {
@@ -125,19 +125,20 @@ input::placeholder {
     /* z-index: -1; */
 }
 
-.circles_bg {
+ .circles_bg {
     position: absolute;
     right: 0;
+    margin-right: 20%;
 }
 
 .bg_circles {
     position: absolute; 
     bottom: 0;
     right: 0;
-    /* z-index: -1; */
-    width: 100px;
+    /* z-index: -1;  */
+    width: 120px;
     opacity: 50%;
-}
+} 
 
 .page_dots {
     display: flex;
@@ -160,9 +161,22 @@ input::placeholder {
 }
 
 @media screen and (max-width: 1750px) {
-    .bg_rect {
+    /* .bg_rect {
         margin-top: -10%;
         margin-right: 5%;
+    } */
+
+    .bg_rect {
+        margin-top: -10%;
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 1990px) {
+    .circles_bg {
+        position: absolute;
+        right: 0;
+        margin-right: 10%;
     }
 }
 
@@ -217,20 +231,22 @@ input::placeholder {
         font-size: 12px;
     }
 
+    .bg_rect, .bg_rocket, .bg_circles {
+        pointer-events: none;
+    }
+
     .bg_rocket {
         width: 20%;
         position: absolute;
         top: 60%;
         left: 0;
         /* z-index: -1; */
-        pointer-events: none;
         opacity: 0.5;
     }
     
     .circles_bg {
         position: absolute;
         right: 0;
-        pointer-events: none;
     }
     
     .bg_circles {
